package com.carles.lalloriguera.ui.extensions

object Tags {

    const val TOP_BAR_TITLE = "Tag Top Bar Title"

    // tasks screen
    const val EMPTY_TASKS_BOX = "Tag Empty Tasks Box"
    const val TASKS_LIST = "Tag Tasks List"
    const val TASKS_LIST_ROW = "Tag Tasks List Row"
    const val TASK_EDIT_ICON = "Tag Task Edit Icon"
    const val TASK_DONE_ICON = "Tag Task Done Icon"
    const val NEW_TASK_BUTTON = "Tag New Task Button"

    // new and edit task screen
    const val TASK_NAME_TEXT_FIELD = "Tag Task Name Text Field"
    const val TASK_PERIODIC_CONTENT = "Tag Periodic Task Content"
    const val TASK_PERIODICITY_MENU_BOX = "Tag Periodicity Menu Box"
    const val TASK_PERIODICITY_TEXT_FIELD = "Tag Periodicity Text Field"
    const val TASK_CALENDAR_TEXT_FIELD = "Tag Calendar Text Field"
    const val TASK_CALENDAR_PICKER_DIALOG = "Tag Calendar Picker Dialog"
    const val TASK_ONE_TIME_CONTENT = "Tag One Time Content"
    const val TASK_ONE_TIME_TASK_BUTTON = "Tag One Time Task Button"
    const val TASK_SAVE_BUTTON = "Tag Task Save Button"
    const val TASK_UPDATE_BUTTON = "Tag Task Update Button"
    const val TASK_DELETE_BUTTON = "Tag Task Delete Button"
    const val TASK_DELETE_CONFIRMATION_DIALOG = "Tag Task Delete Confirmation Dialog"

    // conill screen
    const val CONILL_OK_BUTTON = "Tag Conill Ok Button"


}